Header desktop width FIXED; Search bar & button Tablet & Desktop FIXED

--- a/src/pages/HomePageWarehouse/HomePageWarehouse.scss
+++ b/src/pages/HomePageWarehouse/HomePageWarehouse.scss
@@ -71,7 +71,7 @@
     }
 
     &__button {
-      width: 20vw;
+      width: 22vw;
       font-size: $desk-label-link-button-body-medium;
       margin-bottom: 0;
     }
